# mkLauncher

./: .gitignore  CMakeLists.txt  README.md  build.sh  filepropertiesdialog.cpp  filepropertiesdialog.h  helpers.cpp  helpers.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  searchworker.cpp  searchworker.h  settingsmanager.cpp  settingsmanager.h
i18n/: mkLauncher_de.ts
res/: resources.qrc
src/: filepropertiesdialog.cpp  filepropertiesdialog.h  helpers.cpp  helpers.h  mainwindow.cpp  mainwindow.h  searchworker.cpp  settingsmanager.cpp  settingsmanager.h
